After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728672 - details: Don't crash on Wayland
details: Don't crash on Wayland
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Other Preferences
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
wayland
Depends on:
Blocks: wayland
 
 
Reported: 2014-04-21 18:16 UTC by Matthias Clasen
Modified: 2014-04-24 22:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
details: Don't crash on Wayland (1.84 KB, patch)
2014-04-21 18:16 UTC, Matthias Clasen
committed Details | Review
followup cleanup (897 bytes, patch)
2014-04-21 18:38 UTC, Matthias Clasen
accepted-commit_now Details | Review
Don't parse Xorg.log (3.78 KB, patch)
2014-04-21 18:39 UTC, Matthias Clasen
committed Details | Review
info: Fix build when Wayland support isn't available (808 bytes, patch)
2014-04-24 14:44 UTC, Bastien Nocera
committed Details | Review

Description Matthias Clasen 2014-04-21 18:16:10 UTC
We were just assuming that there is an X server around. This may
not be the case anymore, so check, and deal with running under
Wayland. For now, we just say 'Wayland'. We should do better here,
eventually.
Comment 1 Matthias Clasen 2014-04-21 18:16:14 UTC
Created attachment 274830 [details] [review]
details: Don't crash on Wayland
Comment 2 Matthias Clasen 2014-04-21 18:38:35 UTC
Created attachment 274832 [details] [review]
followup cleanup
Comment 3 Matthias Clasen 2014-04-21 18:39:02 UTC
Created attachment 274833 [details] [review]
Don't parse Xorg.log
Comment 4 Rui Matos 2014-04-22 12:35:40 UTC
Review of attachment 274833 [details] [review]:

Looks fine
Comment 5 Rui Matos 2014-04-22 12:35:52 UTC
Review of attachment 274832 [details] [review]:

++
Comment 6 Rui Matos 2014-04-22 12:36:10 UTC
Review of attachment 274830 [details] [review]:

fine
Comment 7 Matthias Clasen 2014-04-22 21:49:27 UTC
Attachment 274830 [details] pushed as 71a8d89 - details: Don't crash on Wayland
Attachment 274833 [details] pushed as c273c84 - Don't parse Xorg.log
Comment 8 Ting-Wei Lan 2014-04-24 14:24:40 UTC
Attachment 274830 [details] contains #include <gdk/gdkwayland.h>, which is not available when wayland is disabled. This causes the following build problem on FreeBSD:

cc-info-panel.c:37:10: fatal error: 'gdk/gdkwayland.h' file not found
Comment 9 Bastien Nocera 2014-04-24 14:44:30 UTC
Created attachment 275060 [details] [review]
info: Fix build when Wayland support isn't available
Comment 10 Ting-Wei Lan 2014-04-24 17:29:59 UTC
(In reply to comment #9)
> Created an attachment (id=275060) [details] [review]
> info: Fix build when Wayland support isn't available

This patch works on FreeBSD.
Comment 11 Bastien Nocera 2014-04-24 22:38:50 UTC
Attachment 275060 [details] pushed as 6908c0d - info: Fix build when Wayland support isn't available