details: Don't crash on Wayland

We were just assuming that there is an X server around. This may
not be the case anymore, so check, and deal with running under
Wayland. For now, we just say 'Wayland'. We should do better here,
eventually.

https://bugzilla.gnome.org/show_bug.cgi?id=728672